fixed off centred

--- a/css/general.css
+++ b/css/general.css
@@ -33,6 +33,7 @@ header h1 {
 
 .container p {
   padding: 5%;
+  width: calc(1000px + 3vw);
 }
 
 .hidden {
